--- a/CoolBooks/Views/Books/Index.cshtml
+++ b/CoolBooks/Views/Books/Index.cshtml
@@ -32,15 +32,15 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Authors.FirstName)
+                @Html.DisplayFor(modelItem => item.Authors.FirstName) 
             </td>
             <td>
                 @*   @Html.DisplayFor(modelItem => item.Genres.name) *@
             </td>
         <td>
-            @*   @Html.ActionLink("Edit", "Edit", new { id = item.Id }) | *@
+               @Html.ActionLink("Edit", "Edit", new { id = item.Id }) | 
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @*  @Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
         }
