--- a/CoolBooks/Views/Books/Index.cshtml
+++ b/CoolBooks/Views/Books/Index.cshtml
@@ -15,6 +15,7 @@
         <tr>
             <td>Title</td>
             <td>Description</td>
+            <td>ISBN</td>
             <td>Genre</td>
             <td>Author</td>
         </tr>
@@ -31,14 +32,24 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
+
+
+            <td>
+                @Html.DisplayFor(modelItem => item.ISBN)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.Genres.Name) @* Changed ICollection to Genres Genre *@
+            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Authors.FirstName)
+                <br>
+                @Html.DisplayFor(modelItem => item.Authors.LastName)
             </td>
+
             <td>
-                @*   @Html.DisplayFor(modelItem => item.Genres.name) *@
-            </td>
-        <td>
-            @*   @Html.ActionLink("Edit", "Edit", new { id = item.Id }) | *@
+                @*   @Html.ActionLink("Edit", "Edit", new { id = item.Id }) | *@
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                 @*  @Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
             </td>
