--- a/CoolBooks/Views/Genres/Index.cshtml
+++ b/CoolBooks/Views/Genres/Index.cshtml
@@ -47,7 +47,7 @@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary " })
                     @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary " })
-                    @*   @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-primary " }) *@
+                     @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-primary " }) 
             </td>
         </tr>
     }
