--- a/CoolBooks/Views/Books/Details.cshtml
+++ b/CoolBooks/Views/Books/Details.cshtml
@@ -23,7 +23,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript">
         $(function () {
-            $('#Resume').keyup(function (e) {
+            $('#Comments').keyup(function (e) {
                 var max = 500;
                 var len = $(this).val().length;
                 var char = max - len;
@@ -37,7 +37,8 @@
     <div>
         <h4>Books</h4>
         <hr />
-
+        @using (Html.BeginForm())
+    {
         <table class="table table-striped" border="0">
             <tr rowspan="2">
                 <td>
@@ -77,39 +78,40 @@
                     <table align="right" class="table table-striped" border="0">
 
                         @foreach (var reviews in rev)
-    {
-                    <tr>  <td colspan="2"><B>@reviews.UserId</B></td> </tr>
-                    <tr>  <td colspan="2">@reviews.Title  @reviews.Created </td> </tr>
-                    <tr><td>@reviews.Text </td><td> @Html.ActionLink("Delete", "Delete", new { id = string.Empty }, new { @class = "btn btn-primary " })</td></tr>
-                    @*
-    <td>@reviews.Rating</td> *@
+                    {
+                        <tr>  <td colspan="2"><B>@reviews.UserId</B></td> </tr>
+                        <tr>  <td colspan="2">@reviews.Title  @reviews.Created </td> </tr>
+                        <tr><td>@reviews.Text </td><td> @Html.ActionLink("Delete", "Delete", new { id = string.Empty }, new { @class = "btn btn-primary " })</td></tr>
+                        @*
+                        <td>@reviews.Rating</td> *@
 
-}
+                }
                         <tr><td colspan="2"><B>USERNAME</B></td></tr>
                         <tr>
                             <td>
                                 <span id="text-counter">4000</span> character(s) left.
-                                @Html.TextArea("Resume", htmlAttributes: new { rows = "5", cols = "100", @class = "form-control", maxlength = "4000" })
+                                @Html.TextArea("Comments", htmlAttributes: new { rows = "5", cols = "100", @class = "form-control", maxlength = "4000" })
                                 @*   @Html.TextArea("Review", new { maxlength = 500, style = "width:100%; height:100px;" }) </ td > *@
 
 
-<td> @Html.ActionLink("Save", "Save", new { id = string.Empty }, new { @class = "btn btn-primary " })
+                            <td>
+                                <input type="submit" name="n1" value="Save" class="btn btn-primary" />
 
-                                </td>
+                            </td>
 
-                                </tr>
+                        </tr>
 
-                                </table>
+                    </table>
 
-                                </td>
+                </td>
 
-                                </tr>
+            </tr>
 
 
-                                </table>
-
-                                </div>
-
+        </table>
+}
+    </div>
+       
 
                                 <p>
 
