--- a/CoolBooks/Views/Books/Details.cshtml
+++ b/CoolBooks/Views/Books/Details.cshtml
@@ -19,6 +19,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="~/Content/style.css" />
     <title>Details</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript">
@@ -35,87 +36,104 @@
 </head>
 <body>
     <div>
-        <h4>Books</h4>
-        <hr />
+    <h4>Books</h4>
+    <hr />
 
-        <table class="table table-striped" border="0">
-            <tr rowspan="2">
-                <td>
-                    <img src=@bk.ImagePath alt="Image not Available" width="200" height="200" />
-                </td>
-                <td>
+    <table class="table table-striped" border="0">
+    <tr rowspan="2">
+    <td>
+    <img src=@bk.ImagePath alt="Image not Available" width="200" height="200" />
+    </td>
+    <td>
 
-                    <table class="table table-striped" border="0">
-                        <tr>
-                            <td> Title</td>
-                            <td>@bk.Title</td>
+    <table class="table table-striped" border="0">
+    <tr>
+    <td> Title</td>
+    <td>@bk.Title</td>
 
-                        </tr>
-                        <tr>
-                            <td> Description</td>
-                            <td>@bk.Description</td>
+    </tr>
+    <tr>
+    <td> Description</td>
+    <td>@bk.Description</td>
 
-                        </tr>
-                        <tr>
-                            <td>  Author</td>
-                            <td> @bk.Authors.FirstName</td>
+    </tr>
+    <tr>
+    <td>  Author</td>
+    <td> @bk.Authors.FirstName</td>
 
-                        </tr>
-                        <tr>
-                            <td>  Genres</td>
-                            <td> @bk.Genres.Name</td>
+    </tr>
+    <tr>
+    <td>  Genres</td>
+    <td> @bk.Genres.Name</td>
 
-                        </tr>
-                    </table>
-                </td>
+    </tr>
+    </table>
+    </td>
 
-            </tr>
+    </tr>
 
-            <tr>
-                <td width="400" height="200"></td>
-                <td align="right">
-                    <table align="right" class="table table-striped" border="0">
+    <tr>
+    <td width="400" height="200"></td>
+    <td align="right">
+    <table align="right" class="table table-striped" border="0">
 
-                        @foreach (var reviews in rev)
+    @foreach (var reviews in rev)
     {
-                    <tr>  <td colspan="2"><B>@reviews.UserId</B></td> </tr>
-                    <tr>  <td colspan="2">@reviews.Title  @reviews.Created </td> </tr>
-                    <tr><td>@reviews.Text </td><td> @Html.ActionLink("Delete", "Delete", new { id = string.Empty }, new { @class = "btn btn-primary " })</td></tr>
-                    @*
-    <td>@reviews.Rating</td> *@
+        <tr>  <td colspan="2"><B>@reviews.UserId</B></td> </tr>
+        <tr>  <td colspan="2">@reviews.Title  @reviews.Created </td> </tr>
+        <tr><td>@reviews.Text </td><td> @Html.ActionLink("Delete", "Delete", new { id = string.Empty }, new { @class = "btn btn-primary " })</td></tr>
+        @*
+            <td>@reviews.Rating</td> *@
 
-}
-                        <tr><td colspan="2"><B>USERNAME</B></td></tr>
-                        <tr>
-                            <td>
-                                <span id="text-counter">4000</span> character(s) left.
-                                @Html.TextArea("Resume", htmlAttributes: new { rows = "5", cols = "100", @class = "form-control", maxlength = "4000" })
-                                @*   @Html.TextArea("Review", new { maxlength = 500, style = "width:100%; height:100px;" }) </ td > *@
-
-
-<td> @Html.ActionLink("Save", "Save", new { id = string.Empty }, new { @class = "btn btn-primary " })
-
-                                </td>
-
-                                </tr>
-
-                                </table>
-
-                                </td>
-
-                                </tr>
+    }
+    <tr><td colspan="2"><B>USERNAME</B></td></tr>
+    <tr>
+    <td>
+    <span id="text-counter">4000</span> character(s) left.
+    @Html.TextArea("Resume", htmlAttributes: new { rows = "5", cols = "100", @class = "form-control", maxlength = "4000" })
+    @*   @Html.TextArea("Review", new { maxlength = 500, style = "width:100%; height:100px;" }) </ td > *@
 
 
-                                </table>
+    </div>
+    <form id="ratingsForm">
+    <div class="stars">
+    <input type="radio" name="star" class="star-1" id="star-1" />
+    <label class="star-1" for="star-1">1</label>
+    <input type="radio" name="star" class="star-2" id="star-2" />
+    <label class="star-2" for="star-2">2</label>
+    <input type="radio" name="star" class="star-3" id="star-3" />
+    <label class="star-3" for="star-3">3</label>
+    <input type="radio" name="star" class="star-4" id="star-4" />
+    <label class="star-4" for="star-4">4</label>
+    <input type="radio" name="star" class="star-5" id="star-5" />
+    <label class="star-5" for="star-5">5</label>
+    <span></span>
+    </div>
 
-                                </div>
+    </form>
+
+    <td>
+    @Html.ActionLink("Save", "Save", new { id = string.Empty }, new { @class = "btn btn-primary " })
+
+    </td>
+
+    </tr>
+
+    </table>
+
+    </td>
+
+    </tr>
 
 
-                                <p>
+    </table>
 
-                                @*    @Html.ActionLink("Edit", "Edit", new { id = ViewBag.Books.Id }) | *@
-                                @Html.ActionLink("Back to List", "Index", new { id = string.Empty }, new { @class = "btn btn-primary " })
 
-                                </p>
+    <p>
+
+        @*    @Html.ActionLink("Edit", "Edit", new { id = ViewBag.Books.Id }) | *@
+        @Html.ActionLink("Back to List", "Index", new { id = string.Empty }, new { @class = "btn btn-primary " })
+
+    </p>
 </body>
 </html>
